--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | New Unity Project</title>
+    <title>Unity WebGL Player | IncrementalInsanity</title>
     <script src="Build/UnityLoader.js"></script>
     <script>
       UnityLoader.instantiate("unityContainer", "Build/Test.json");
     </script>
   </head>
   <body>
-    <div id="unityContainer" style="width: 1080px; height: 720px; margin: auto"></div>
+    <div id="unityContainer" style="width: 1920px; height: 1080px; margin: auto"></div>
   </body>
 </html>
